# SektantEngine

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  compile  configure-makefiles  configure-ninja  configure-xcode
app/: CMakeLists.txt  Entrypoint.cpp  Entrypoint.h  cycle.cpp  cycle.h  main.cpp
configured/: config.h.in
docs/: Doxyfile  Doxyfile.bak
docs/latex/: md_README.tex  md_VCPKG__Install.tex
modules/: CMakeLists.txt
modules/Physis/: CMakeLists.txt
modules/Physis/Physis/: Physis.h  Precision.h  Vector3.h
modules/Physis/src/: Vector3.cpp
modules/Physis/test/: CMakeLists.txt  Vector3Test.cpp
modules/Render/: CMakeLists.txt
modules/Render/Render/: TGAImage.h  WriteTGA.h
modules/Render/include/: Window.h  WriteTGA.h
modules/Render/src/: TGAImage.cpp  WriteTGA.cpp
modules/Render/test/: CMakeLists.txt
modules/SKT/: .cmake-format.yaml  CMakeLists.txt
modules/SKT/SKT/: Entrypoint.h  GameLoop.h  Timer.h  Types.h  Window.h
modules/SKT/src/: Entrypoint.cpp  GameLoop.cpp
modules/System/: CMakeLists.txt
modules/System/include/: GameLoop.h  Macros.h
modules/System/src/: GameLoop.cpp
modules/Utils/: Timer.h
sandbox/: CMakeLists.txt  main.cpp
sandbox/demos/: TGAFramebuffer_example1.cpp
sandbox/sandbox/: sandbox.cpp
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  GameLoop.cpp  GameLoop.h
src/render/: CMakeLists.txt  render.cpp
tools/: make-doc  make_exec
